[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/enemys/frog.gd" type="Script" id=1]
[ext_resource path="res://sprites/sheets/frog_sheet.png" type="Texture" id=2]
[ext_resource path="res://sprites/shadows/shadow.png" type="Texture" id=3]
[ext_resource path="res://scenes/components/healthCompent.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/components/hitboxComponent.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 22, 15, 22, 15 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 22, 15 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 22, 0, 22, 15 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 44, 0, 22, 15 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 66, 0, 22, 15 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 22, 15 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 22, 15 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 15, 22, 15 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": false,
"name": "toAttack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 9, 3.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 6 )

[sub_resource type="CircleShape2D" id=10]
radius = 90.0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 7.5, 6 )

[node name="frog" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 1 )
live = 40
damage = 5
shield = 0

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.313726 )
position = Vector2( -2.38419e-07, -8 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 3 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -7.5 )
frames = SubResource( 8 )
animation = "idle"
frame = 1
playing = true

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, -3.5 )
shape = SubResource( 9 )

[node name="HealthComponent" parent="." instance=ExtResource( 4 )]
maxHealth = 40
health = 40

[node name="hitboxComponent" parent="." instance=ExtResource( 5 )]
collision_layer = 8
collision_mask = 64
healthPath = NodePath("../HealthComponent")

[node name="shape" type="CollisionShape2D" parent="hitboxComponent"]
position = Vector2( -1, -6 )
shape = SubResource( 1 )

[node name="view" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="shape" type="CollisionShape2D" parent="view"]
shape = SubResource( 10 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
monitoring = false

[node name="shape" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 1.5, -8 )
shape = SubResource( 13 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true

[connection signal="body_entered" from="view" to="." method="_on_view_body_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
